Fix some legend spacing (#2744)

--- a/packages/chart/src/components/Legend/LegendGroup/LegendGroup.styles.css
+++ b/packages/chart/src/components/Legend/LegendGroup/LegendGroup.styles.css
@@ -17,6 +17,11 @@
     }
   }
 
+  .legend-group-grid {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .legend-group.top,
   .legend-group.bottom {
     grid-gap: 10px;
